# Vehicle-Motion-Algorithm

./: .gitignore  CONTRIBUTING.md  Introduction.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/maneuvers/: ackermann_slow_slalom_linrange.json  constant_radius.json  double_lane_change.json  fish_hook_consumer_class.json  iso17288_uturn.json  iso3888_1_double_lane_change.json  iso3888_2_obstacle_avoidance.json  iso3888_3_lane_change_brake.json  iso4138_constant_radius.json  iso7401_impulse_steer.json  iso7401_ramp_step_steer.json  iso7401_sine_sweep.json  iso7401_step_steer.json  iso7975_braking_in_turn.json  iso_split_friction.json  iso_straight_line_brake.json  sine_sweep.json  sine_with_dwell_esc_class.json  split_mu.json  step_steer.json  throttle_on_in_turn_understeer.json
data/vehicles/: vehicle_case_offroad.json  vehicle_case_sedan.json  vehicle_case_suv.json
scripts/: run_gui.py
src/vma/: __init__.py  api.py  iso_catalog.py  paths.py
src/vma/cli/: main.py
src/vma/control/pid/: __init__.py
src/vma/core/: __init__.py  factories.py  simulation.py
src/vma/core/analytical/: __init__.py  benchmarks.py
src/vma/core/maneuver/: __init__.py  custom.py  standard.py
src/vma/core/solver/: __init__.py  base.py  custom_rk4.py  dae_solver.py  scipy_ode.py
src/vma/core/tire/: __init__.py  base.py  brush_combined.py  dugoff.py  fiala.py  (+2 more)
src/vma/gui/: app.py  theme.py
src/vma/io/: parameters.py  results.py
src/vma/web/: api.py
tests/: test_analytical.py  test_api_stack.py  test_paths.py  test_vehicle.py
(+8 files in other folders)
