[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vma"
version = "0.1.0"
description = "Vehicle Motion Architecture - vehicle dynamics simulation"
authors = [{name = "Michael XZC"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vma = "vma.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
